hphp/hack/test/typecheck/primitive_type_arguments_int.php.exp
File "primitive_type_arguments_int.php", line 3, characters 12-14:
Type arguments are not expected for this type (Naming[2064])
