hphp/hack/test/typecheck/primitive_type_arguments_int.php
<?hh

function f(int<string> $s): void {}
